# Python_WEB_lesson10_Django_notes

./: README.md  how_do_project.txt  pyproject.toml
notes/noteapp/: forms.py  models.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
notes/noteapp/templatetags/: extract_tags.py
notes/notes/: settings.py  urls.py
notes/users/: apps.py  models.py  views.py
notes/users/migrations/: 0001_initial.py
