[tool.poetry]
name = "Django app to manage notes"
version = "0.1.0"
description = "Django app to manage notes."
authors = ["Yuliia Melnychenko <arwen.vogel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.1.2"
pillow = "11.0.0"
psycopg2 = "2.9.10"

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"